# romea-core-localisation

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_localisation.repos  romea_localisation.rosinstall  romea_localisation_public.repos
cmake/: romea_core_localisationConfig.cmake.in  romea_localisationConfig.cmake.in
include/romea_core_localisation/: LocalisationFSMState.hpp  LocalisationPredictor.hpp  LocalisationStoppingCriteria.hpp  LocalisationUpdaterAngularSpeed.hpp  LocalisationUpdaterBase.hpp  LocalisationUpdaterExteroceptive.hpp  LocalisationUpdaterLinearSpeed.hpp  LocalisationUpdaterLinearSpeeds.hpp  LocalisationUpdaterProprioceptive.hpp  LocalisationUpdaterTriggerMode.hpp  LocalisationUpdaterTwist.hpp  LocalisationUpdatesMonitoring.hpp  ObservationAngularSpeed.hpp  ObservationAttitude.hpp  ObservationCourse.hpp  ObservationLinearSpeed.hpp  ObservationLinearSpeeds.hpp  ObservationPose.hpp  ObservationPosition.hpp  ObservationRange.hpp  ObservationTwist.hpp
include/romea_core_localisation/robot_to_human/: R2HLocalisationMetaState.hpp  R2HLocalisationResults.hpp
include/romea_core_localisation/robot_to_human/kalman/: R2HLocalisationKFMetaState.hpp  R2HLocalisationKFPredictor.hpp  R2HLocalisationKFResults.hpp  R2HLocalisationKFUpdaterLeaderPosition.hpp  R2HLocalisationKFUpdaterRange.hpp
include/romea_core_localisation/robot_to_robot/: R2RLocalisationMetaState.hpp  R2RLocalisationResults.hpp  R2RLocalisationTraits.hpp  R2RLocalisationUpdaterLeaderTwist.hpp
include/romea_core_localisation/robot_to_robot/kalman/: R2RLocalisationKFMetaState.hpp  R2RLocalisationKFPredictor.hpp  R2RLocalisationKFResults.hpp  R2RLocalisationKFUpdaterLeaderPose.hpp  R2RLocalisationKFUpdaterRange.hpp
include/romea_core_localisation/robot_to_robot/particle/: R2RLocalisationPFMetaState.hpp  R2RLocalisationPFPredictor.hpp  R2RLocalisationPFResults.hpp  R2RLocalisationPFUpdaterLeaderPose.hpp  R2RLocalisationPFUpdaterRange.hpp
include/romea_core_localisation/robot_to_world/: R2WLevelArmCompensation.hpp  R2WLocalisationMetaState.hpp  R2WLocalisationResults.hpp  R2WLocalisationUpdaterAttitude.hpp  R2WlocalisationTraits.hpp
include/romea_core_localisation/robot_to_world/kalman/: R2WLocalisationKFMetaState.hpp  R2WLocalisationKFPredictor.hpp  R2WLocalisationKFResults.hpp  R2WLocalisationKFUpdaterCourse.hpp  R2WLocalisationKFUpdaterPose.hpp  R2WLocalisationKFUpdaterPosition.hpp  R2WLocalisationKFUpdaterRange.hpp
include/romea_core_localisation/robot_to_world/particle/: R2WLocalisationPFMetaState.hpp  R2WLocalisationPFPredictor.hpp  R2WLocalisationPFResults.hpp  R2WLocalisationPFUpdaterCourse.hpp  R2WLocalisationPFUpdaterPose.hpp  R2WLocalisationPFUpdaterPosition.hpp  R2WLocalisationPFUpdaterRange.hpp
include/romea_localisation/: LocalisationFSMState.hpp  LocalisationPredictor.hpp  LocalisationStoppingCriteria.hpp  LocalisationUpdater.hpp  LocalisationUpdaterAngularSpeed.hpp  LocalisationUpdaterBase.hpp  LocalisationUpdaterExteroceptive.hpp  LocalisationUpdaterLinearSpeed.hpp  LocalisationUpdaterLinearSpeeds.hpp  LocalisationUpdaterTriggerMode.hpp  LocalisationUpdaterTwist.hpp  LocalisationUpdatesMonitoring.hpp  ObservationAngularSpeed.hpp  ObservationAttitude.hpp  ObservationCourse.hpp  ObservationLinearSpeed.hpp  ObservationLinearSpeeds.hpp  ObservationPose.hpp  ObservationPosition.hpp  ObservationRange.hpp  ObservationTwist.hpp  Pose2D.hpp  Pose3D.hpp  Position2D.hpp  Twist3D.hpp
include/romea_localisation/robot_to_human/: R2HLocalisationMetaState.hpp  R2HLocalisationResults.hpp
include/romea_localisation/robot_to_robot/: R2RLocalisationMetaState.hpp  R2RLocalisationResults.hpp  R2RLocalisationTraits.hpp  R2RLocalisationUpdaterLeaderTwist.hpp
include/romea_localisation/robot_to_world/: R2WLevelArmCompensation.hpp  R2WLocalisationMetaState.hpp  R2WLocalisationResults.hpp  R2WLocalisationUpdaterAttitude.hpp  R2WlocalisationTraits.hpp
src/: LocalisationFSMState.cpp  LocalisationUpdater.cpp  LocalisationUpdaterBase.cpp  LocalisationUpdaterExteroceptive.cpp  LocalisationUpdaterProprioceptive.cpp  LocalisationUpdaterTriggerMode.cpp  LocalisationUpdatesMonitoring.cpp  Pose2D.cpp  Pose3D.cpp  PoseAndTwist2D.cpp  PoseAndTwist3D.cpp  Position2D.cpp  Position3D.cpp  Twist2D.cpp  Twist3D.cpp
src/robot_to_human/: R2HLocalisationMetaState.cpp
src/robot_to_human/kalman/: R2HLocalisationKFMetaState.cpp  R2HLocalisationKFPredictor.cpp  R2HLocalisationKFResults.cpp  R2HLocalisationKFUpdaterLeaderPosition.cpp  R2HLocalisationKFUpdaterRange.cpp
src/robot_to_robot/: R2RLocalisationMetaState.cpp
src/robot_to_robot/kalman/: R2RLocalisationKFMetaState.cpp  R2RLocalisationKFPredictor.cpp  R2RLocalisationKFResults.cpp  R2RLocalisationKFUpdaterLeaderPose.cpp  R2RLocalisationKFUpdaterRange.cpp
src/robot_to_robot/particle/: R2RLocalisationPFMetaState.cpp  R2RLocalisationPFPredictor.cpp  R2RLocalisationPFResults.cpp  R2RLocalisationPFUpdaterLeaderPose.cpp  R2RLocalisationPFUpdaterRange.cpp
src/robot_to_world/: R2WLevelArmCompensation.cpp  R2WLocalisationMetaState.cpp
src/robot_to_world/kalman/: R2WLocalisationKFMetaState.cpp  R2WLocalisationKFPredictor.cpp  R2WLocalisationKFResults.cpp  R2WLocalisationKFUpdaterCourse.cpp  R2WLocalisationKFUpdaterPose.cpp  R2WLocalisationKFUpdaterPosition.cpp  R2WLocalisationKFUpdaterRange.cpp
src/robot_to_world/particle/: R2WLocalisationPFMetaState.cpp  R2WLocalisationPFPredictor.cpp  R2WLocalisationPFResults.cpp  R2WLocalisationPFUpdaterCourse.cpp  R2WLocalisationPFUpdaterPose.cpp  R2WLocalisationPFUpdaterPosition.cpp  R2WLocalisationPFUpdaterRange.cpp
test/: CMakeLists.txt  test_R2W_particle_updaters.cpp  test_conversions.cpp  test_filter_robot_to_world.cpp  test_fsm_state_conversions.cpp  test_proprioceptive_updaters.cpp  test_utils.hpp
test/robot_to_world/: CMakeLists.txt  test_angular_speed_updater.cpp  test_attitude_updater.cpp  test_level_arm_compensation.cpp  test_linear_speed_updater.cpp  test_linear_speeds_updater.cpp  test_twist_updater.cpp
test/robot_to_world/kalman/: test_course_updater.cpp  test_pose_updater.cpp
(+27 files in other folders)
